Fix primary color text contrast in light mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,13 +6,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #18E888;
-  --ifm-color-primary-dark: #00C48B;
-  --ifm-color-primary-darker: #02a40e;
-  --ifm-color-primary-darkest: #01870c;
-  --ifm-color-primary-light: #39F1B3;
-  --ifm-color-primary-lighter: #02de14;
-  --ifm-color-primary-lightest: #28fd38;
+  --ifm-color-primary: #0D874E;
+  --ifm-color-primary-dark: #0C7946;
+  --ifm-color-primary-darker: #096D3E;
+  --ifm-color-primary-darkest: #065632;
+  --ifm-color-primary-light: #0E8B51;
+  --ifm-color-primary-lighter: #109E5B;
+  --ifm-color-primary-lightest: #11AC64;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
   --ifm-background-color: #f9f9f9;
